fix: [DEL-4850]: fixed alignment issues (#11355)

--- a/src/modules/30-delegates/pages/delegates/DelegatesPage.module.scss
+++ b/src/modules/30-delegates/pages/delegates/DelegatesPage.module.scss
@@ -237,7 +237,7 @@
 
 .instanceStatus {
   height: fit-content;
-  padding-left: 6px !important;
+  padding-left: 8px !important;
 }
 
 .paddingLeft {
@@ -246,4 +246,8 @@
 
 .marginLeft {
   margin-left: 8px !important;
+}
+
+.statusPadding {
+  padding-left: 18px !important;
 }
